[package]
name = "quadtree"
version = "0.1.0"
edition = "2024"

[dependencies]
approx.workspace = true
eyre.workspace = true
itertools.workspace = true
num-traits.workspace = true
rand.workspace = true
ordered-float = {version= "5.0.0", features=["serde"]}
rand_chacha.workspace = true
serdev = "0.2.0"

[dev-dependencies]
serde_json = "1.0.140"
